--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,14 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.693.0",
+    "@aws-sdk/client-ses": "^3.693.0",
     "body-parser": "^1.20.3",
+    "connect-session-sequelize": "^7.1.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "mysql2": "^3.11.4",
     "sequelize": "^6.37.5"
   },
